<resources>
    <string name="app_name">Ibri</string>

    <!--Bottom nav-->
    <string name="eventi">Eventi</string>
    <string name="ufficiali">Ufficiali</string>
    <string name="iscrizioni">Iscrizioni</string>
    <string name="profilo">Profilo</string>

    <!--Buttons-->
    <string name="indietro">Indietro</string>

    <!--Login e Registrazione -->
    <string name="login">Login</string>
    <string name="non_sei_ancora_iscritto_crea_un_nuovo_account">Non sei ancora iscritto? <font color="#FF7C1F">Crea un nuovo account</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="gender">Gender</string>
    <string name="oppure_registrati_come_azienda">Oppure registrati come azienda</string>
    <string name="registrati">Registrati</string>
    <string name="p_iva">P.Iva</string>
    <string name="scegli_una_data">Scegli una data</string>
    <string name="email_gia_in_uso">Email già in uso, prova ad accedere di nuovo</string>
    <string name="inserisci_il_tuo_nome">Inserisci il tuo nome</string>
    <string name="inserisci_il_tuo_cognome">Inserisci il tuo cognome</string>
    <string name="inserisci_compleanno">Inserisci il tuo compleanno</string>
    <string name="verifica_email">Verifica la tua email</string>
    <string name="inserisci_email">Inserisci la tua email</string>
    <string name="password_non_corrispondono">Le password non corrispondono</string>
    <string name="inserisci_password">Inserisci la password</string>
    <string name="inserisci_piva">Inserisci la tua Partita Iva</string>
    <string name="verifica_dati_inseriti">Verifica i dati inseriti</string>
    <!--Profile-->
    <string name="questo_utente_non_ha_una_descrizione">Questo utente non ha una descrizione</string>
    <string name="altri_obiettivi">Altri Obiettivi</string>
    <string name="salva_le_modifiche">Salva le modifiche</string>
    <string name="logout">Logout</string>
    <!--TagsActivity-->
    <string name="scegli_i_tag_per_il_tuo_evento">Scegli i tag per il tuo evento</string>
    <string name="aggiungi_i_tag">Aggiungi i tag</string>
    <string name="tag_selezionati">Tag selezionati:</string>
    <!--MapActivity-->
    <string name="controlla_connessione">Servizio non disponibile, controlla la connessione ad internet</string>
    <string name="nessun_indirizzo_trovato">Nessun indirizzo trovato</string>
    <!--NewStandEventActivity-->
    <string name="anteprima">Anteprima</string>
    <string name="aggiungi_un_immagine">Aggiungi un\'immagine</string>
    <string name="titolo_evento">Titolo evento</string>
    <string name="descrizione">Descrizione</string>
    <string name="pubblico">Pubblico</string>
    <string name="privato">Privato</string>
    <string name="tags">Tags</string>
    <string name="scegli_tag_con_cui_descriveresti_questo_evento">Scegli tag con cui descriveresti questo evento</string>
    <string name="scegli_luogo">Scegli luogo</string>
    <string name="via">Via…</string>
    <string name="inizio_registrazioni_e_data_evento">Inizio registrazioni e data evento</string>
    <string name="dovrai_scegliere_due_date_dove_la_prima_indica_l_inizio_delle_registrazioni_all_evento_e_che_valida_fino_alla_seconda_data_data_dell_evento_proprio">*Dovrai scegliere due date, dove la prima indica l\'inizio delle registrazioni all\'evento e che valida fino alla seconda data, data dell\'evento proprio</string>
    <string name="ora_dell_evento">Ora dell\'evento</string>
    <string name="numero_massimo_di_persone">Numero massimo di persone</string>
    <string name="crea_evento">Crea Evento</string>
    <string name="hai_dimenticato_di_inserire_qualcosa">Hai dimenticato di inserire qualcosa?</string>
    <string name="nuovo_evento">Nuovo Evento</string>
    <string name="sei_sicuro_di_voler_cancellare_questo_evento">Sei sicuro di voler cancellare questo evento?</string>
    <!--Chat-->
    <string name="invia_un_messaggio">Invia un messaggio</string>
    <string name="ancora_nessun_messaggio">Ancora nessun messaggio</string>

</resources>